[workspace]
members = [
    "msquic-async",
    "h3-msquic-async",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.80"
argh = "0.1.10"
bytes = "1.5.0"
futures = "0.3.30"
futures-io = "0.3.30"
h3 = { git = "https://github.com/hyperium/h3", rev = "385da3ad93407ec8eed15172f63561f6fb2bca40" }
h3-datagram = { git = "https://github.com/hyperium/h3", rev = "385da3ad93407ec8eed15172f63561f6fb2bca40" }
hex = "0.4"
http = "1"
libc = "0.2.153"
msquic = { version = "2.6.0-beta", path = "./msquic" }
msquic-v2-5 = { package = "msquic", version = "2.5.1-beta" }
seera-msquic = { version = "2.6.0-beta2", path = "./seera-msquic" }
msquic-async = { version = "0.5.0", path = "./msquic-async", default-features = false }
rangemap = "1.5.1"
schannel = "0.1.27"
tempfile = "3.10.1"
test-log = "0.2.15"
thiserror = "1.0.57"
tokio = "1.42.0"
tokio-util = "0.7.9"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", default-features = false }
