[package]
name = "h3-msquic-async"
version = "0.1.0"
authors = ["Masahiro Kozuka <masa.koz@outlook.com>"]
edition = "2021"
description = "MsQuic-Async based library for using h3"
repository = "https://github.com/masa-koz/msquic-async-rs"
readme = "README.md"
keywords = ["quic", "h3", "http3"]
categories = ["network-programming", "web-programming"]
license = "MIT"
rust-version = "1.83"
include = [
    "/*.md",
    "/*.toml",
    "/LICENSE",
    "/examples",
    "/src",
]

[features]
tracing = ["dep:tracing"]
tls-schannel = ["msquic-async/tls-schannel"]
static = ["msquic-async/static"]

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
h3 = { workspace = true }
msquic-async = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
http = { workspace = true }
schannel = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi", "env-filter", "time", "tracing-log"] }
