[package]
name = "h3-msquic-async"
version = "0.2.0"
authors = ["Masahiro Kozuka <masa.koz@outlook.com>"]
edition = "2021"
description = "MsQuic-Async based library for using h3"
repository = "https://github.com/masa-koz/msquic-async-rs"
readme = "README.md"
keywords = ["quic", "h3", "http3"]
categories = ["network-programming", "web-programming"]
license = "MIT"
rust-version = "1.83"
include = [
    "/*.md",
    "/*.toml",
    "/LICENSE",
    "/examples",
    "/src",
]

[features]
default = []
tracing = ["dep:tracing"]
datagram = ["dep:h3-datagram"]
quictls = ["msquic-async/quictls"]
static = ["msquic-async/static"]

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
h3 = { workspace = true }
h3-datagram = { workspace = true, optional = true }
msquic-async = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
http = { workspace = true }
schannel = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi", "env-filter", "time", "tracing-log"] }
