[package]
name = "h3-msquic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
h3 = { workspace = true }
msquic = { workspace = true, features = ["static"] }
msquic-async = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
http = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }

[features]
tracing = ["dep:tracing"]