[package]
name = "msquic-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio"]

[dependencies]
bytes = { workspace = true }
futures-io = { workspace = true }
libc = { workspace = true }
msquic = { workspace = true }
once_cell = { workspace = true }
rangemap = { workspace = true }
socket2 = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util"], optional = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
futures = { workspace = true }
rcgen = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log"] }
