[package]
name = "msquic-async"
version = "0.2.0"
authors = ["Masahiro Kozuka <masa.koz@outlook.com>"]
edition = "2021"
description = "MsQuic based quic library that supports async operation"
repository = "https://github.com/masa-koz/msquic-async-rs"
readme = "README.md"
keywords = ["quic", "async"]
categories = ["network-programming"]
license = "MIT"
rust-version = "1.83"
include = [
    "/*.md",
    "/*.toml",
    "/LICENSE",
    "/examples",
    "/src",
]

[features]
default = ["tokio"]
tls-schannel = ["msquic/schannel"]

[dependencies]
bytes = { workspace = true }
futures-io = { workspace = true }
libc = { workspace = true }
msquic = { workspace = true, features = ["preview-api"] }
rangemap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util"], optional = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
futures = { workspace = true }
schannel = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi", "env-filter", "time", "tracing-log"] }
