[package]
name = "msquic-async"
version = "0.3.0"
authors = ["Masahiro Kozuka <masa.koz@outlook.com>"]
edition = "2021"
description = "MsQuic based quic library that supports async operation"
repository = "https://github.com/masa-koz/msquic-async-rs"
readme = "README.md"
keywords = ["quic", "async"]
categories = ["network-programming"]
license = "MIT"
rust-version = "1.83"
include = [
    "/*.md",
    "/*.toml",
    "/LICENSE",
    "/examples",
    "/src",
]

[features]
default = ["tokio", "msquic-latest"]

msquic-latest = ["msquic"]
msquic-2-5 = ["msquic-v2-5"]
msquic-seera = ["seera-msquic"]

quictls = ["msquic/quictls"]
static = ["msquic/static"]
msquic-2-5-quictls = ["msquic-v2-5/quictls"]
msquic-2-5-static = ["msquic-v2-5/static"]
msquic-seera-quictls = ["seera-msquic/quictls"]
msquic-seera-static = ["seera-msquic/static"]

[dependencies]
bytes = { workspace = true }
futures-io = { workspace = true }
hex = { workspace = true }
libc = { workspace = true }
msquic = { workspace = true, features = ["preview-api"], optional = true }
msquic-v2-5 = { workspace = true, features = ["preview-api"], optional = true }
seera-msquic = { workspace = true, features = [], optional = true }
rangemap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util"], optional = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
futures = { workspace = true }
schannel = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi", "env-filter", "time", "tracing-log"] }
